--- a/profil.html
+++ b/profil.html
@@ -29,9 +29,9 @@
             </div>
 
             <ul class="odkazy">
-                <li class="portfolio"><a href="#">Moje portfolio</a></li><!--
-                --><li class="facebook"><a href="#">Facebook</a></li><!--
-                --><li class="twitter"><a href="#">Twitter</a></li>
+                <li class="portfolio"><a href="#">MOJE PORTFOLIO</a></li><!--
+                --><li class="facebook"><a href="#">FACEBOOK</a></li><!--
+                --><li class="twitter"><a href="#">TWITTER</a></li>
             </ul>
 
         </div>
